build_vite_1.txt

> stackedit@5.15.4 build
> vite build

The CJS build of Vite's Node API is deprecated. See https://vite.dev/guide/troubleshooting.html#vite-cjs-node-api-deprecated for more details.
[36mvite v5.4.21 [32mbuilding for production...[36m[39m
transforming...
node:internal/process/promises:332
    triggerUncaughtException(err, true /* fromPromise */);
    ^

[Failed to load PostCSS config: Failed to load PostCSS config (searchPath: C:/Users/Velli/Desktop/CODE/antigravity/layeredit): [Error] Loading PostCSS Plugin failed: Cannot find module 'autoprefixer'
Require stack:
- C:\Users\Velli\Desktop\CODE\antigravity\layeredit\.postcssrc.js

(@C:\Users\Velli\Desktop\CODE\antigravity\layeredit\.postcssrc.js)
Error: Loading PostCSS Plugin failed: Cannot find module 'autoprefixer'
Require stack:
- C:\Users\Velli\Desktop\CODE\antigravity\layeredit\.postcssrc.js

(@C:\Users\Velli\Desktop\CODE\antigravity\layeredit\.postcssrc.js)
    at load (file:///C:/Users/Velli/Desktop/CODE/antigravity/layeredit/node_modules/vite/dist/node/chunks/dep-BK3b2jBa.js:33632:11)
    at file:///C:/Users/Velli/Desktop/CODE/antigravity/layeredit/node_modules/vite/dist/node/chunks/dep-BK3b2jBa.js:33657:16
    at Array.map (<anonymous>)
    at plugins (file:///C:/Users/Velli/Desktop/CODE/antigravity/layeredit/node_modules/vite/dist/node/chunks/dep-BK3b2jBa.js:33656:8)
    at processResult (file:///C:/Users/Velli/Desktop/CODE/antigravity/layeredit/node_modules/vite/dist/node/chunks/dep-BK3b2jBa.js:33726:14)
    at file:///C:/Users/Velli/Desktop/CODE/antigravity/layeredit/node_modules/vite/dist/node/chunks/dep-BK3b2jBa.js:33856:14]

Node.js v25.6.1
